--- a/index3.html
+++ b/index3.html
@@ -39,12 +39,11 @@
 					<a class="contactA" href="mailto:mail@gmail.com" target="_blank">mail@gmail.com</a>
 				</li>
 			</ul>
-			<iframe src="https://goo.gl/maps/hgjFbzf5jfHt3ot47" title="map"></iframe>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2978.6969156084087!2d44.77732021543564!3d41.70547817923626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cce3a01fef7%3A0x2a75ae2128072d6!2s30%20Vasil%20Petriashvili%20Street%2C%20T&#39;bilisi!5e0!3m2!1sru!2sge!4v1639851835105!5m2!1sru!2sge" width="874" height="476" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 		</div>
 		</address>
 	</div>
 	</main>
-
 	<footer class="footer">
 		<a href="https://www.facebook.com" target="_blank">
 		<img src="./images/fbfooter.png" alt="fb"> </a>
